rust/test/meta/mod_interface/front/layer_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`
 --> ../../../rust/test/meta/mod_interface/front/layer_unknown_vis/mod.rs
  |
  |   xyz layer layer_a;
  |   ^^^
